--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
         "autoprefixer": "10.4.15",
         "bcrypt": "^5.1.1",
         "clsx": "^2.0.0",
+        "framer-motion": "^10.16.5",
         "next": "^14.0.2",
         "next-auth": "^5.0.0-beta.3",
         "postcss": "8.4.31",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-icons": "^4.12.0",
+        "react-use": "^17.4.0",
         "tailwindcss": "3.3.3",
         "typescript": "5.2.2",
         "use-debounce": "^10.0.0",
