fix ts build errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,11 @@
         ],
         "paths": {
             "@/*": ["./*"]
-        }
+        },
+        "typeRoots": [
+            "app/lib/types",
+            "node_modules/@types"
+        ]
     },
     "include": [
         "next-env.d.ts",
