--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react-dom": "18.2.0",
         "react-icons": "^4.12.0",
         "react-use": "^17.4.0",
+        "tailwind-merge": "^2.0.0",
         "tailwindcss": "3.3.3",
         "typescript": "5.2.2",
         "use-debounce": "^10.0.0",
