--- a/package.json
+++ b/package.json
@@ -9,16 +9,11 @@
         "seed": "node -r dotenv/config ./scripts/seed.js"
     },
     "dependencies": {
-        "@heroicons/react": "^2.0.18",
         "@tailwindcss/forms": "^0.5.7",
         "@types/node": "20.5.7",
-        "@vercel/postgres": "^0.5.1",
-        "autoprefixer": "10.4.15",
-        "bcrypt": "^5.1.1",
         "clsx": "^2.0.0",
         "framer-motion": "^10.16.5",
         "next": "^14.0.2",
-        "next-auth": "^5.0.0-beta.3",
         "postcss": "8.4.31",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -26,9 +21,7 @@
         "react-use": "^17.4.0",
         "tailwind-merge": "^2.0.0",
         "tailwindcss": "3.3.3",
-        "typescript": "5.2.2",
-        "use-debounce": "^10.0.0",
-        "zod": "^3.22.2"
+        "typescript": "5.2.2"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.1",
