--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
         "seed": "node -r dotenv/config ./scripts/seed.js"
     },
     "dependencies": {
+        "@stripe/react-stripe-js": "^2.4.0",
+        "@stripe/stripe-js": "^2.2.2",
         "@tailwindcss/forms": "^0.5.7",
         "@types/node": "20.5.7",
+        "autoprefixer": "^10.4.16",
+        "axios": "^1.6.3",
         "clsx": "^2.0.0",
         "framer-motion": "^10.16.5",
         "next": "^14.0.2",
-        "postcss": "8.4.31",
+        "postcss": "^8.4.32",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "^4.12.0",
         "react-use": "^17.4.0",
         "tailwind-merge": "^2.0.0",
-        "tailwindcss": "3.3.3",
+        "tailwindcss": "^3.4.0",
         "typescript": "5.2.2"
     },
     "devDependencies": {
