--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@graphql-codegen/cli": "^5.0.0",
         "@graphql-codegen/client-preset": "^4.1.0",
         "@graphql-typed-document-node/core": "^3.2.0",
+        "@parcel/watcher": "^2.3.0",
         "@types/bcrypt": "^5.0.1",
         "@types/react": "18.2.21",
         "@types/react-dom": "18.2.14",
