--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "watch": "graphql-codegen -w"
     },
     "dependencies": {
+        "@apollo/client": "^3.8.9",
+        "@apollo/experimental-nextjs-app-support": "^0.6.0",
         "@hookform/resolvers": "^3.3.4",
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-icons": "^1.3.0",
@@ -28,7 +30,6 @@
         "clsx": "^2.1.0",
         "framer-motion": "^10.16.5",
         "graphql": "^16.8.1",
-        "graphql-request": "^6.1.0",
         "lucide-react": "^0.306.0",
         "next": "^14.0.2",
         "postcss": "^8.4.32",
