--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
         "@apollo/client": "^3.8.9",
         "@apollo/experimental-nextjs-app-support": "^0.6.0",
         "@hookform/resolvers": "^3.3.4",
+        "@radix-ui/react-avatar": "^1.0.4",
         "@radix-ui/react-checkbox": "^1.0.4",
+        "@radix-ui/react-dialog": "^1.0.5",
+        "@radix-ui/react-dropdown-menu": "^2.0.6",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-popover": "^1.0.7",
         "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-toast": "^1.1.5",
+        "@radix-ui/react-tooltip": "^1.0.7",
         "@stripe/react-stripe-js": "^2.4.0",
         "@stripe/stripe-js": "^2.2.2",
         "@tailwindcss/forms": "^0.5.7",
@@ -29,6 +34,7 @@
         "axios": "^1.6.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "cmdk": "^0.2.0",
         "framer-motion": "^10.16.5",
         "graphql": "^16.8.1",
         "lucide-react": "^0.306.0",
