--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "start": "next start",
         "seed": "node -r dotenv/config ./scripts/seed.js",
         "compile": "graphql-codegen",
-        "watch": "graphql-codegen -w"
+        "watch:code-gen": "graphql-codegen -w",
+        "watch:tailwind": "npx tailwindcss -i ./app/styles/global.css -o ./app/styles/output.css --watch",
+        "watch:all": "npm run watch:code-gen & npm run watch:tailwind"
     },
     "dependencies": {
         "@apollo/client": "^3.8.9",
@@ -21,6 +23,7 @@
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-popover": "^1.0.7",
+        "@radix-ui/react-scroll-area": "^1.0.5",
         "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-toast": "^1.1.5",
@@ -44,6 +47,7 @@
         "react-dom": "18.2.0",
         "react-hook-form": "^7.49.2",
         "react-icons": "^4.12.0",
+        "react-resizable-panels": "^1.0.8",
         "react-use": "^17.4.0",
         "tailwind-merge": "^2.2.0",
         "tailwindcss": "^3.4.0",
