--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "lucide-react": "^0.306.0",
         "next": "^14.0.2",
         "postcss": "^8.4.32",
+        "pusher-js": "^8.4.0-rc2",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.49.2",
