--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "compile": "graphql-codegen",
         "watch:code-gen": "graphql-codegen -w",
         "watch:tailwind": "npx tailwindcss -i ./app/styles/global.css -o ./app/styles/output.css --watch",
-        "watch:all": "npm run watch:code-gen & npm run watch:tailwind"
+        "watch:all": "npm run watch:code-gen & npm run watch:tailwind",
+        "watch": "npm run watch:all"
     },
     "dependencies": {
         "@apollo/client": "^3.8.9",
@@ -60,6 +61,7 @@
     "devDependencies": {
         "@graphql-codegen/cli": "^5.0.0",
         "@graphql-codegen/client-preset": "^4.1.0",
+        "@graphql-codegen/fragment-matcher": "^5.0.0",
         "@graphql-codegen/typescript-resolvers": "^4.0.1",
         "@graphql-typed-document-node/core": "^3.2.0",
         "@parcel/watcher": "^2.3.0",
@@ -71,6 +73,7 @@
         "eslint": "^8.52.0",
         "eslint-config-next": "^14.0.0",
         "eslint-config-prettier": "9.0.0",
+        "graphql-codegen-apollo-next-ssr": "^1.7.4",
         "prettier": "3.1.1",
         "prettier-plugin-tailwindcss": "0.5.4",
         "sass": "^1.69.5",
