--- a/package.json
+++ b/package.json
@@ -1,85 +1,86 @@
 {
-    "private": true,
-    "scripts": {
-        "build": "next build",
-        "dev": "next dev",
-        "prettier": "prettier --write --ignore-unknown .",
-        "prettier:check": "prettier --check --ignore-unknown .",
-        "start": "next start",
-        "seed": "node -r dotenv/config ./scripts/seed.js",
-        "compile": "graphql-codegen",
-        "watch:code-gen": "graphql-codegen -w",
-        "watch:tailwind": "npx tailwindcss -i ./app/styles/global.css -o ./app/styles/output.css --watch",
-        "watch:all": "npm run watch:code-gen & npm run watch:tailwind",
-        "watch": "npm run watch:all"
-    },
-    "dependencies": {
-        "@apollo/client": "^3.8.9",
-        "@apollo/experimental-nextjs-app-support": "^0.6.0",
-        "@hookform/resolvers": "^3.3.4",
-        "@radix-ui/react-avatar": "^1.0.4",
-        "@radix-ui/react-checkbox": "^1.0.4",
-        "@radix-ui/react-dialog": "^1.0.5",
-        "@radix-ui/react-dropdown-menu": "^2.0.6",
-        "@radix-ui/react-icons": "^1.3.0",
-        "@radix-ui/react-label": "^2.0.2",
-        "@radix-ui/react-popover": "^1.0.7",
-        "@radix-ui/react-scroll-area": "^1.0.5",
-        "@radix-ui/react-separator": "^1.0.3",
-        "@radix-ui/react-slot": "^1.0.2",
-        "@radix-ui/react-toast": "^1.1.5",
-        "@radix-ui/react-tooltip": "^1.0.7",
-        "@stripe/react-stripe-js": "^2.4.0",
-        "@stripe/stripe-js": "^2.2.2",
-        "@tailwindcss/forms": "^0.5.7",
-        "@tanstack/react-query": "^5.17.8",
-        "@types/node": "20.5.7",
-        "autoprefixer": "^10.4.16",
-        "axios": "^1.6.3",
-        "class-variance-authority": "^0.7.0",
-        "clsx": "^2.1.0",
-        "cmdk": "^0.2.0",
-        "framer-motion": "^10.16.5",
-        "graphql": "^16.8.1",
-        "graphql-ws": "^5.14.3",
-        "lucide-react": "^0.306.0",
-        "next": "^14.0.2",
-        "postcss": "^8.4.32",
-        "pusher-js": "^8.4.0-rc2",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-hook-form": "^7.49.2",
-        "react-icons": "^4.12.0",
-        "react-resizable-panels": "^1.0.8",
-        "react-use": "^17.4.0",
-        "tailwind-merge": "^2.2.0",
-        "tailwindcss": "^3.4.0",
-        "tailwindcss-animate": "^1.0.7",
-        "ws": "^8.16.0",
-        "zod": "^3.22.4"
-    },
-    "devDependencies": {
-        "@graphql-codegen/cli": "^5.0.0",
-        "@graphql-codegen/client-preset": "^4.1.0",
-        "@graphql-codegen/fragment-matcher": "^5.0.0",
-        "@graphql-codegen/typescript-resolvers": "^4.0.1",
-        "@graphql-typed-document-node/core": "^3.2.0",
-        "@parcel/watcher": "^2.3.0",
-        "@types/bcrypt": "^5.0.1",
-        "@types/react": "18.2.21",
-        "@types/react-dom": "18.2.14",
-        "@vercel/style-guide": "^5.0.1",
-        "dotenv": "^16.3.1",
-        "eslint": "^8.52.0",
-        "eslint-config-next": "^14.0.0",
-        "eslint-config-prettier": "9.0.0",
-        "graphql-codegen-apollo-next-ssr": "^1.7.4",
-        "prettier": "3.1.1",
-        "prettier-plugin-tailwindcss": "0.5.4",
-        "sass": "^1.69.5",
-        "typescript": "^5.3.3"
-    },
-    "engines": {
-        "node": ">=18.17.0"
-    }
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "prettier": "prettier --write --ignore-unknown .",
+    "prettier:check": "prettier --check --ignore-unknown .",
+    "start": "next start",
+    "seed": "node -r dotenv/config ./scripts/seed.js",
+    "compile": "graphql-codegen",
+    "watch:code-gen": "graphql-codegen -w",
+    "watch:tailwind": "npx tailwindcss -i ./app/styles/global.css -o ./app/styles/output.css --watch",
+    "watch:prettier": "onchange \"**/*\" -- prettier --write --ignore-unknown {{changed}}",
+    "watch:all": "npm run watch:code-gen & npm run watch:tailwind & npm run watch:prettier",
+    "watch": "npm run watch:all"
+  },
+  "dependencies": {
+    "@apollo/client": "^3.8.9",
+    "@apollo/experimental-nextjs-app-support": "^0.6.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/react-query": "^5.17.8",
+    "@types/node": "20.5.7",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "cmdk": "^0.2.0",
+    "framer-motion": "^10.16.5",
+    "graphql": "^16.8.1",
+    "graphql-ws": "^5.14.3",
+    "lucide-react": "^0.306.0",
+    "next": "^14.0.2",
+    "postcss": "^8.4.32",
+    "pusher-js": "^8.4.0-rc2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.2",
+    "react-icons": "^4.12.0",
+    "react-resizable-panels": "^1.0.8",
+    "react-use": "^17.4.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "ws": "^8.16.0",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/client-preset": "^4.1.0",
+    "@graphql-codegen/fragment-matcher": "^5.0.0",
+    "@graphql-codegen/typescript-resolvers": "^4.0.1",
+    "@graphql-typed-document-node/core": "^3.2.0",
+    "@parcel/watcher": "^2.3.0",
+    "@types/bcrypt": "^5.0.1",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.14",
+    "@vercel/style-guide": "^5.0.1",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "^14.0.0",
+    "eslint-config-prettier": "9.0.0",
+    "graphql-codegen-apollo-next-ssr": "^1.7.4",
+    "prettier": "3.1.1",
+    "prettier-plugin-tailwindcss": "0.5.4",
+    "sass": "^1.69.5",
+    "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=18.17.0"
+  }
 }
