--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
     "start": "next start",
@@ -84,8 +84,8 @@
     "eslint-plugin-unused-imports": "^3.1.0",
     "graphql-codegen-apollo-next-ssr": "^1.7.4",
     "patch-package": "^8.0.0",
-    "prettier": "3.1.1",
-    "prettier-plugin-tailwindcss": "0.5.4",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "sass": "^1.69.5",
     "typescript": "^5.3.3"
   },
