--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,6 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 .idea
-app/gql/*
-!app/gql/scalars.ts
+app/gql/generated
 app/styles/output.css
 tailwind.config.js
