--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.2",
     "@tailwindcss/forms": "^0.5.7",
-    "@types/node": "20.5.7",
+    "@types/node": "^20.11.17",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.3",
     "class-variance-authority": "^0.7.0",
@@ -51,7 +51,7 @@
     "graphql": "^16.8.1",
     "graphql-ws": "^5.14.3",
     "lucide-react": "^0.306.0",
-    "next": "^14.0.2",
+    "next": "^14.1.4",
     "postcss": "^8.4.32",
     "pusher-js": "^8.4.0-rc2",
     "react": "18.2.0",
@@ -74,12 +74,12 @@
     "@graphql-typed-document-node/core": "^3.2.0",
     "@parcel/watcher": "^2.3.0",
     "@types/bcrypt": "^5.0.1",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.14",
+    "@types/react": "^18.2.73",
+    "@types/react-dom": "^18",
     "@vercel/style-guide": "^5.0.1",
     "dotenv": "^16.3.1",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.0",
+    "eslint-config-next": "^14.1.4",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-unused-imports": "^3.1.0",
@@ -89,8 +89,5 @@
     "prettier-plugin-tailwindcss": "^0.5.4",
     "sass": "^1.69.5",
     "typescript": "^5.3.3"
-  },
-  "engines": {
-    "node": ">=18.17.0"
   }
 }
