--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-three/drei": "^9.105.4",
+    "@react-three/fiber": "^8.16.2",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.2",
     "@tailwindcss/forms": "^0.5.7",
@@ -51,6 +53,7 @@
     "framer-motion": "^10.16.5",
     "graphql": "^16.8.1",
     "graphql-ws": "^5.14.3",
+    "leva": "^0.9.35",
     "lucide-react": "^0.306.0",
     "next": "^14.1.4",
     "postcss": "^8.4.32",
@@ -64,6 +67,7 @@
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.163.0",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
   },
